--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
   </nav>
   <main>
     <section id="espresso">
-      <h2>Espresso</h2>
+      <h2>Zon</h2>
       <p>Espresso is a concentrated coffee beverage that is brewed by forcing hot water under high pressure through a compact amount of finely ground coffee beans. The result is a small, strong shot of coffee with a layer of crema on top. Espresso is the base for many popular coffee drinks, such as cappuccinos and lattes.</p>
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/ba1ca1e0-f2be-4e73-9842-b124b68a1525.jpeg" alt="Espresso">
     </section>
     <section id="latte">
-      <h2>Latte</h2>
+      <h2>Zee</h2>
       <p>A latte is a coffee drink made with espresso and steamed milk. The ratio of espresso to milk can vary, but a common ratio is one-third espresso and two-thirds milk. The milk is steamed to create a frothy texture, and can be flavored with syrups or spices. A latte is typically topped with a layer of foam.</p>
       <img src="https://cdn.pixabay.com/photo/2013/11/05/23/55/coffee-206142_1280.jpg" alt="Latte">
     </section>
     <section id="cappuccino">
-      <h2>Cappuccino</h2>
+      <h2>Strand</h2>
       <p>A cappuccino is a coffee drink made with espresso, steamed milk, and a layer of frothed milk. The ratio of espresso to milk is typically equal, with a small amount of frothed milk added on top. Cappuccinos are often topped with a sprinkle of cocoa powder or cinnamon. </p>
       <img src="https://cdn.pixabay.com/photo/2017/02/05/12/14/coffee-2032494_1280.jpg" alt="Cappuccino">
     </section>
