--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section id="latte">
       <h2>Zee</h2>
       <p>A latte is a coffee drink made with espresso and steamed milk. The ratio of espresso to milk can vary, but a common ratio is one-third espresso and two-thirds milk. The milk is steamed to create a frothy texture, and can be flavored with syrups or spices. A latte is typically topped with a layer of foam.</p>
-      <img src="https://cdn.pixabay.com/photo/2013/11/05/23/55/coffee-206142_1280.jpg" alt="Latte">
+      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/189036e8-7434-4da4-9e80-211eaf86b8c8.jpeg" alt="Latte">
     </section>
     <section id="cappuccino">
       <h2>Strand</h2>
