--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/ba1ca1e0-f2be-4e73-9842-b124b68a1525.jpeg" alt="Espresso">
     </section>
     <section id="latte">
-      <h2>Zee</h2>
+      <h2>Torreguadiaro</h2>
       <p>A latte is a coffee drink made with espresso and steamed milk. The ratio of espresso to milk can vary, but a common ratio is one-third espresso and two-thirds milk. The milk is steamed to create a frothy texture, and can be flavored with syrups or spices. A latte is typically topped with a layer of foam.</p>
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/189036e8-7434-4da4-9e80-211eaf86b8c8.jpeg" alt="Latte">
     </section>
