--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </nav>
   <main>
     <section id="espresso">
-      <h2>Zon</h2>
+      <h2>Kom genieten in ons appartement aan de Costa Del Sol</h2>
       <p> Welkom op onze website, waar wij trots ons prachtige vakantiehuisje aan de Spaanse kust promoten. Gelegen op slechts 30 minuten wandelen van het schilderachtige Sotogrande, biedt onze accommodatie niet alleen een ideale uitvalsbasis om de omgeving te verkennen, maar ook een unieke kans om te genieten van de ongerepte stranden en adembenemende vergezichten die deze regio te bieden heeft. En als u een golfliefhebber bent, dan zit u bij ons helemaal goed - er zijn uitstekende golfbanen in de buurt, waaronder de wereldberoemde Valderrama Golf Club. Met zicht op de indrukwekkende rots van Gibraltar, op slechts 10 kilometer ten westen van het pittoreske Torreguadiaro, is ons vakantiehuisje de perfecte plek om te ontspannen, tot rust te komen, te golfen en te genieten van alles wat deze prachtige omgeving te bieden heeft. Dus waar wacht u nog op? Boek nu en ontdek zelf waarom deze plek zo bijzonder is.</p>
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/ba1ca1e0-f2be-4e73-9842-b124b68a1525.jpeg" alt="Espresso">
     </section>
