--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
     </section>
     <section id="latte">
       <h2>Torreguadiaro</h2>
-      <p>A latte is a coffee drink made with espresso and steamed milk. The ratio of espresso to milk can vary, but a common ratio is one-third espresso and two-thirds milk. The milk is steamed to create a frothy texture, and can be flavored with syrups or spices. A latte is typically topped with a layer of foam.</p>
+      <p>Torreguadiaro is een betoverend kustplaatsje dat alles biedt wat je zoekt in een vakantiebestemming. Met zijn charmante sfeer, adembenemend uitzicht op de Middellandse Zee en een scala aan heerlijke culinaire opties, is het een ware traktatie voor de zintuigen. Geniet van verse visgerechten, typisch Spaanse tapas en heerlijke Italiaanse gerechten in de lokale restaurants. Bovendien bevindt het pittoreske haventje van Sotogrande zich op loopafstand, waar je een zeilboot kunt huren voor een onvergetelijk dagje varen.
+
+Maar dat is nog niet alles - Torreguadiaro is ook de perfecte uitvalsbasis voor het verkennen van enkele van de meest fascinerende steden in de regio. Van het wereldberoemde Alhambra-paleis in Granada tot de majestueuze kathedraal van Sevilla, de bruisende stad Malaga en het charmante Estepona, er valt zoveel te ontdekken op korte afstand.
+
+Kortom, Torreguadiaro biedt de ideale mix van ontspanning, culinaire verwennerij en avontuurlijke mogelijkheden. Verken de prachtige kustlijn, geniet van de lokale gerechten en maak onvergetelijke uitstapjes naar nabijgelegen steden. Een vakantie in Torreguadiaro zal je zeker betoveren.</p>
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/189036e8-7434-4da4-9e80-211eaf86b8c8.jpeg" alt="Latte">
     </section>
     <section id="cappuccino">
