--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ Kortom, Torreguadiaro biedt de ideale mix van ontspanning, culinaire verwennerij
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/189036e8-7434-4da4-9e80-211eaf86b8c8.jpeg" alt="Latte">
     </section>
     <section id="cappuccino">
-      <h2>Strand</h2>
-      <p>A cappuccino is a coffee drink made with espresso, steamed milk, and a layer of frothed milk. The ratio of espresso to milk is typically equal, with a small amount of frothed milk added on top. Cappuccinos are often topped with a sprinkle of cocoa powder or cinnamon. </p>
+      <h2>Het appartement</h2>
+      <p>Welkom bij ons prachtige vakantieappartement op een perfecte locatie. Het ruime appartement heeft twee slaapkamers en een slaapbank in de woonkamer, geschikt voor maximaal zes personen. Het is van alle gemakken voorzien, inclusief een recent gerenoveerde keuken en badkamer. Het hoogtepunt is het adembenemende uitzicht op zee, met het strand voor de deur. Perfect voor gezinnen met kinderen en baby's, met speciale faciliteiten beschikbaar. Geniet van een zorgeloze vakantie aan de kust in dit comfortabele appartement.</p>
       <img src="https://cdn.pixabay.com/photo/2017/02/05/12/14/coffee-2032494_1280.jpg" alt="Cappuccino">
     </section>
   </main>
