--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Kortom, Torreguadiaro biedt de ideale mix van ontspanning, culinaire verwennerij
     <section id="cappuccino">
       <h2>Het appartement</h2>
       <p>Welkom bij ons prachtige vakantieappartement op een perfecte locatie. Het ruime appartement heeft twee slaapkamers en een slaapbank in de woonkamer, geschikt voor maximaal zes personen. Het is van alle gemakken voorzien, inclusief een recent gerenoveerde keuken en badkamer. Het hoogtepunt is het adembenemende uitzicht op zee, met het strand voor de deur. Perfect voor gezinnen met kinderen en baby's, met speciale faciliteiten beschikbaar. Geniet van een zorgeloze vakantie aan de kust in dit comfortabele appartement.</p>
-      <img src="https://cdn.pixabay.com/photo/2017/02/05/12/14/coffee-2032494_1280.jpg" alt="Cappuccino">
+      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/b4a03de3-a21e-4517-9735-de1d10247186.jpeg" alt="Cappuccino">
     </section>
   </main>
   <footer>
