--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
   </header>
   <nav>
     <ul>
-      <li><a href="#espresso">Zon</a></li>
-      <li><a href="#latte">Zee</a></li>
-      <li><a href="#cappuccino">Strand</a></li>
+      <li><a href="#espresso">Home</a></li>
+      <li><a href="#latte">Prijzen</a></li>
+      <li><a href="#cappuccino">Contact</a></li>
     </ul>
   </nav>
   <main>
