--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       text-align: justify;
     }
     img {
-      max-width: 100%;
+      width: 100%;
       height: auto;
       display: block;
       margin: 0 auto;
