--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <header>
-    <h1>Torreguadiaro</h1>
+    <h1>Vakantiehuisje in Torreguadiaro</h1>
   </header>
   <nav>
     <ul>
