--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </header>
   <nav>
     <ul>
-      <li><a href="#espresso">Home</a></li>
+      <li><a href="#" onclick="loadPage('home.html')">Home</a></li>
       <li><a href="#latte">Prijzen</a></li>
       <li><a href="#cappuccino">Contact</a></li>
     </ul>
