--- a/home.html
+++ b/home.html
@@ -1,1 +1,21 @@
+<main>
+    <section id="espresso">
+      <h2>Kom genieten in ons appartement aan de Costa Del Sol</h2>
+      <p>Welkom op onze website, waar wij trots ons prachtige vakantiehuisje aan de Spaanse kust promoten. Gelegen op slechts 30 minuten wandelen van het schilderachtige Sotogrande, biedt onze accommodatie niet alleen een ideale uitvalsbasis om de omgeving te verkennen, maar ook een unieke kans om te genieten van de ongerepte stranden en adembenemende vergezichten die deze regio te bieden heeft. En als u een golfliefhebber bent, dan zit u bij ons helemaal goed - er zijn uitstekende golfbanen in de buurt, waaronder de wereldberoemde Valderrama Golf Club. Met zicht op de indrukwekkende rots van Gibraltar, op slechts 10 kilometer ten westen van het pittoreske Torreguadiaro, is ons vakantiehuisje de perfecte plek om te ontspannen, tot rust te komen, te golfen en te genieten van alles wat deze prachtige omgeving te bieden heeft. Dus waar wacht u nog op? Boek nu en ontdek zelf waarom deze plek zo bijzonder is.</p>
+      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/ba1ca1e0-f2be-4e73-9842-b124b68a1525.jpeg" alt="Espresso">
+    </section>
+    <section id="latte">
+      <h2>Torreguadiaro</h2>
+      <p>Torreguadiaro is een betoverend kustplaatsje dat alles biedt wat je zoekt in een vakantiebestemming. Met zijn charmante sfeer, adembenemend uitzicht op de Middellandse Zee en een scala aan heerlijke culinaire opties, is het een ware traktatie voor de zintuigen. Geniet van verse visgerechten, typisch Spaanse tapas en heerlijke Italiaanse gerechten in de lokale restaurants. Bovendien bevindt het pittoreske haventje van Sotogrande zich op loopafstand, waar je een zeilboot kunt huren voor een onvergetelijk dagje varen.
 
+Maar dat is nog niet alles - Torreguadiaro is ook de perfecte uitvalsbasis voor het verkennen van enkele van de meest fascinerende steden in de regio. Van het wereldberoemde Alhambra-paleis in Granada tot de majestueuze kathedraal van Sevilla, de bruisende stad Malaga en het charmante Estepona, er valt zoveel te ontdekken op korte afstand.
+
+Kortom, Torreguadiaro biedt de ideale mix van ontspanning, culinaire verwennerij en avontuurlijke mogelijkheden. Verken de prachtige kustlijn, geniet van de lokale gerechten en maak onvergetelijke uitstapjes naar nabijgelegen steden. Een vakantie in Torreguadiaro zal je zeker betoveren.</p>
+      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/189036e8-7434-4da4-9e80-211eaf86b8c8.jpeg" alt="Latte">
+    </section>
+    <section id="cappuccino">
+      <h2>Het appartement</h2>
+      <p>Welkom bij ons prachtige vakantieappartement op een perfecte locatie. Het ruime appartement heeft twee slaapkamers en een slaapbank in de woonkamer, geschikt voor maximaal zes personen. Het is van alle gemakken voorzien, inclusief een recent gerenoveerde keuken en badkamer. Het hoogtepunt is het adembenemende uitzicht op zee, met het strand voor de deur. Perfect voor gezinnen met kinderen en baby's, met speciale faciliteiten beschikbaar. Geniet van een zorgeloze vakantie aan de kust in dit comfortabele appartement.</p>
+      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/b4a03de3-a21e-4517-9735-de1d10247186.jpeg" alt="Cappuccino">
+    </section>
+  </main>
