--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <nav>
     <ul>
       <li><a href="#" onclick="loadPage('home.html')">Home</a></li>
-      <li><a href="#latte">Prijzen</a></li>
+      <li><a href="#" onclick="loadPage('prijzen.html')">Prijzen</a></li>
       <li><a href="#cappuccino">Contact</a></li>
     </ul>
   </nav>
