--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <ul>
       <li><a href="#" onclick="loadPage('home.html')">Home</a></li>
       <li><a href="#" onclick="loadPage('prijzen.html')">Prijzen</a></li>
-      <li><a href="#cappuccino">Contact</a></li>
+      <li><a href="#" onclick="loadPage('contact.html')">Contact</a></li>
     </ul>
   </nav>
   <div class="content" id="content">
