--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,6 @@
-
+<main>
+    <section id="espresso">
+      <h2>Contact</h2>
+      <p>Voor boekingen en andere vragen kunt u contact met ons opnemen door te bellen of mailen naar: Sander Feith - swwfeith@gmail.com - +31629284850</p>
+    </section>
+  </main>
