--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       <li><a href="#" onclick="loadPage('home.html')">Home</a></li>
       <li><a href="#" onclick="loadPage('prijzen.html')">Prijzen</a></li>
       <li><a href="#" onclick="loadPage('contact.html')">Contact</a></li>
+      <li><a href="#" onclick="loadPage('kalender.html')">Kalender</a></li>
     </ul>
   </nav>
   <div class="content" id="content">
