--- a/kalender.html
+++ b/kalender.html
@@ -1,1 +1,7 @@
-
+<main>
+    <section id="espresso">
+      <h1>Boekingen kalender</h1>
+        <div id="calendar"></div>
+        <script src="script.js"></script>
+    </section>
+</main>
