--- a/index.html
+++ b/index.html
@@ -98,6 +98,27 @@
     footer p {
       margin: 0;
     }
+    #calendar {
+      width: 400px;
+      height: 400px;
+      border: 1px solid #ccc;
+    }
+    .day {
+       width: 14.28%;
+       height: 50px;
+       float: left;
+       border-bottom: 1px solid #ccc;
+       border-right: 1px solid #ccc;
+       box-sizing: border-box;
+       padding: 10px;
+    }
+    .day:hover {
+       background-color: #f2f2f2;
+       cursor: pointer;
+    }
+     .booked {
+       background-color: #ff9999;
+       color: white;
   </style>
 </head>
 <body>
