wijzigingen in headers

--- a/kalender.html
+++ b/kalender.html
@@ -1,6 +1,6 @@
 <main>
     <section id="espresso">
-      <h1>Boekingen kalender</h1>
+      <h2>Boekingskalender</h2>
         <div id="calendar"></div>
         <script src="script.js"></script>
     </section>
