poging tot aanpassing kalender

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ Kortom, Torreguadiaro biedt de ideale mix van ontspanning, culinaire verwennerij
     </section>
   </main>
   </div>
+  </body>
   <footer>
     <p></p>
   </footer>
