--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <nav>
     <ul>
       <li><a href="#" onclick="loadPage('home.html')">Home</a></li>
-      <li><a href="#" onclick="loadPage('prijzen.html')">Prijzen</a></li>
+      <li><a href="#" onclick="loadPage('prijzen.html')">PrijzenBlabla</a></li>
       <li><a href="#" onclick="loadPage('contact.html')">Contact</a></li>
       <li><a href="#" onclick="loadPage('kalender.html')">Boekingskalender</a></li>
     </ul>
