home html op 1 plek onderhouden

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <li><a href="#" onclick="loadPage('kalender.html')">Boekingskalender</a></li>
     </ul>
   </nav>
-  <div class="content" id="content">
+  <div onload="loadPage('home.html')" class="content" id="content">
   <main>
     <section id="espresso">
       <h2>Kom genieten in ons appartement aan de Costa Del Sol</h2>
