main toegevoegd in div

--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
     </ul>
   </nav>
   <div onload="loadPage('home.html')" class="content" id="content">
+    <main>
+      
+    </main>
   </div>
   </body>
   <footer>
