--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
      }
   </style>
 </head>
-<body>
+<body onload="loadPage('home.html')">
   <header>
     <h1>Vakantiehuisje in Torreguadiaro</h1>
   </header>
@@ -134,9 +134,9 @@
       <li><a href="#" onclick="loadPage('kalender.html')">Boekingskalender</a></li>
     </ul>
   </nav>
-  <div onload="loadPage('home.html')" class="content" id="content">
+  <div class="content" id="content">
     <main>
-      
+
     </main>
   </div>
   </body>
