text op home beter leesbaar met enters in html

--- a/index.html
+++ b/index.html
@@ -135,9 +135,7 @@
     </ul>
   </nav>
   <div class="content" id="content">
-    <main>
-
-    </main>
+    <!-- Hier komt de inhoud van de pagina, onload van de body of onclick vanuit de links in het menu -->
   </div>
   </body>
   <footer>
