img-voor in home html

--- a/home.html
+++ b/home.html
@@ -16,16 +16,30 @@
     </section>
     <section id="latte">
       <h2>Torreguadiaro</h2>
-      <p>Torreguadiaro is een betoverend kustplaatsje dat alles biedt wat je zoekt in een vakantiebestemming. Met zijn charmante sfeer, adembenemend uitzicht op de Middellandse Zee en een scala aan heerlijke culinaire opties, is het een ware traktatie voor de zintuigen. Geniet van verse visgerechten, typisch Spaanse tapas en heerlijke Italiaanse gerechten in de lokale restaurants. Bovendien bevindt het pittoreske haventje van Sotogrande zich op loopafstand, waar je een zeilboot kunt huren voor een onvergetelijk dagje varen.
-
-Maar dat is nog niet alles - Torreguadiaro is ook de perfecte uitvalsbasis voor het verkennen van enkele van de meest fascinerende steden in de regio. Van het wereldberoemde Alhambra-paleis in Granada tot de majestueuze kathedraal van Sevilla, de bruisende stad Malaga en het charmante Estepona, er valt zoveel te ontdekken op korte afstand.
-
-Kortom, Torreguadiaro biedt de ideale mix van ontspanning, culinaire verwennerij en avontuurlijke mogelijkheden. Verken de prachtige kustlijn, geniet van de lokale gerechten en maak onvergetelijke uitstapjes naar nabijgelegen steden. Een vakantie in Torreguadiaro zal je zeker betoveren.</p>
-      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/189036e8-7434-4da4-9e80-211eaf86b8c8.jpeg" alt="Latte">
+      <p>Torreguadiaro is een betoverend kustplaatsje dat alles biedt wat je zoekt in een vakantiebestemming. 
+      Met zijn charmante sfeer, adembenemend uitzicht op de Middellandse Zee en een scala aan heerlijke culinaire opties, 
+      is het een ware traktatie voor de zintuigen. 
+      Geniet van verse visgerechten, typisch Spaanse tapas en heerlijke Italiaanse gerechten in de lokale restaurants. 
+      Bovendien bevindt het pittoreske haventje van Sotogrande zich op loopafstand, 
+      waar je een zeilboot kunt huren voor een onvergetelijk dagje varen. 
+      Maar dat is nog niet alles - Torreguadiaro is ook de perfecte uitvalsbasis voor het verkennen van enkele van de meest fascinerende steden in de regio. 
+      Van het wereldberoemde Alhambra-paleis in Granada tot de majestueuze kathedraal van Sevilla, 
+      de bruisende stad Malaga en het charmante Estepona, er valt zoveel te ontdekken op korte afstand. 
+      Kortom, Torreguadiaro biedt de ideale mix van ontspanning, 
+      culinaire verwennerij en avontuurlijke mogelijkheden. 
+      Verken de prachtige kustlijn, geniet van de lokale gerechten en maak onvergetelijke uitstapjes naar nabijgelegen steden. 
+      Een vakantie in Torreguadiaro zal je zeker betoveren.</p>
+      <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/img-voor.jpeg" alt="Latte">
     </section>
     <section id="cappuccino">
       <h2>Het appartement</h2>
-      <p>Welkom bij ons prachtige vakantieappartement op een perfecte locatie. Het ruime appartement heeft twee slaapkamers en een slaapbank in de woonkamer, geschikt voor maximaal zes personen. Het is van alle gemakken voorzien, inclusief een recent gerenoveerde keuken en badkamer. Het hoogtepunt is het adembenemende uitzicht op zee, met het strand voor de deur. Perfect voor gezinnen met kinderen en baby's, met speciale faciliteiten beschikbaar. Geniet van een zorgeloze vakantie aan de kust in dit comfortabele appartement.</p>
+      <p>Welkom bij ons prachtige vakantieappartement op een perfecte locatie. 
+      Het ruime appartement heeft twee slaapkamers en een slaapbank in de woonkamer, 
+      geschikt voor maximaal zes personen. 
+      Het is van alle gemakken voorzien, inclusief een recent gerenoveerde keuken en badkamer. 
+      Het hoogtepunt is het adembenemende uitzicht op zee, met het strand voor de deur. 
+      Perfect voor gezinnen met kinderen en baby's, met speciale faciliteiten beschikbaar. 
+      Geniet van een zorgeloze vakantie aan de kust in dit comfortabele appartement.</p>
       <img src="https://raw.githubusercontent.com/marcokosnoot/Torreguadiaro/main/b4a03de3-a21e-4517-9735-de1d10247186.jpeg" alt="Cappuccino">
     </section>
   </main>
