calendar div toegevoegd op index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <div class="content" id="content">
     <!-- Hier komt de inhoud van de pagina, onload van de body of onclick vanuit de links in het menu -->
   </div>
+  <div id="calendar"></div>
   </body>
   <footer>
     <p></p>
