added google calendar widget to index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <div class="content" id="content">
     <!-- Hier komt de inhoud van de pagina, onload van de body of onclick vanuit de links in het menu -->
   </div>
-  <div id="calendar"></div>
+  <div class="calendar-container">
+    <iframe src="https://calendar.google.com/calendar/embed?src=vakantiehuistorre%40gmail.com&ctz=Europe%2FAmsterdam" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  </div>
   </body>
   <footer>
     <p></p>
@@ -44,62 +46,6 @@
       // Voer het verzoek uit
       xhttp.send();
     }
-  </script>
-  <!--<script src="script.js"></script>-->
-  <script>
-    // Define your available and unavailable dates
-const availableDates = ['2023-06-01', '2023-06-02', '2023-06-03', '2023-06-10'];
-const unavailableDates = ['2023-06-04', '2023-06-05', '2023-06-11'];
-
-// Render the availability calendar
-function renderCalendar() {
-  const calendarElement = document.getElementById('calendar');
-  const currentDate = new Date();
-  const currentYear = currentDate.getFullYear();
-  const currentMonth = currentDate.getMonth();
-  const daysInMonth = new Date(currentYear, currentMonth + 1, 0).getDate();
-  const firstDayOfMonth = new Date(currentYear, currentMonth, 1).getDay();
-
-  // Clear the calendar
-  calendarElement.innerHTML = '';
-
-  // Add the days of the week
-  const daysOfWeek = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
-  for (let i = 0; i < daysOfWeek.length; i++) {
-    const dayOfWeekElement = document.createElement('div');
-    dayOfWeekElement.classList.add('calendar-day');
-    dayOfWeekElement.textContent = daysOfWeek[i];
-    calendarElement.appendChild(dayOfWeekElement);
-  }
-
-  // Add empty cells for the days before the first day of the month
-  for (let i = 0; i < firstDayOfMonth; i++) {
-    const emptyCell = document.createElement('div');
-    emptyCell.classList.add('calendar-day');
-    calendarElement.appendChild(emptyCell);
-  }
-
-  // Add the days of the month
-  for (let day = 1; day <= daysInMonth; day++) {
-    const dayElement = document.createElement('div');
-    dayElement.classList.add('calendar-day');
-    dayElement.textContent = day;
-
-    const date = `${currentYear}-${currentMonth + 1}-${day.toString().padStart(2, '0')}`;
-    if (availableDates.includes(date)) {
-      dayElement.classList.add('available');
-    } else if (unavailableDates.includes(date)) {
-      dayElement.classList.add('unavailable');
-      dayElement.setAttribute('disabled', true);
-    }
-
-    calendarElement.appendChild(dayElement);
-  }
-}
-
-// Call the renderCalendar function to display the initial calendar
-renderCalendar();
-
   </script>
 </body>
 </html>
