google calendar widget weg uit index naar kalender

--- a/kalender.html
+++ b/kalender.html
@@ -1,7 +1,8 @@
 <main>
     <section id="espresso">
       <h2>Boekingskalender</h2>
-        <div id="calendar"></div>
-        <script src="script.js"></script>
+      <div class="calendar-container">
+        <iframe src="https://calendar.google.com/calendar/embed?src=vakantiehuistorre%40gmail.com&ctz=Europe%2FAmsterdam" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      </div>
     </section>
 </main>
