--- a/kalender.html
+++ b/kalender.html
@@ -2,7 +2,7 @@
     <section id="espresso">
       <h2>Boekingskalender</h2>
       <div class="calendar-container">
-        <iframe src="https://calendar.google.com/calendar/embed?src=vakantiehuistorre%40gmail.com&ctz=Europe%2FAmsterdam&showTitle=0&showPrint=0&showTabs=0" style="border: 0" width="100%" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?src=vakantiehuistorre%40gmail.com&ctz=Europe%2FAmsterdam&showTitle=0&showPrint=0&showTabs=0" style="border: 0" width="100%" height= "650" frameborder="0" scrolling="no"></iframe>
       </div>
     </section>
 </main>
