--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="loadPage('home.html')">
   <header>
-    <h1>Vakantiehuisje in Torreguadiaro</h1>
+    <h1>Vakantiehuis in Torreguadiaro</h1>
   </header>
   <nav>
     <ul>
