--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,17 @@
 <main>
     <section id="espresso">
       <h2>Contact</h2>
-      <p>Voor boekingen en andere vragen kunt u contact met ons opnemen door te bellen of mailen naar: Sander Feith - swwfeith@gmail.com - +31629284850</p>
-    </section>
-  </main>
+      <p>Voor boekingen en andere vragen kunt u contact met ons opnemen door te bellen of mailen naar: Sander Feith - swwfeith@gmail.com - +31629284850 of onderstaand formulier invullen om een reserveringsverzoek in te dienen:</p>
+  
+  <form>
+    <label for="voornaam">Voornaam:</label>
+    <input type="text" id="voornaam" name="voornaam" required><br><br>
+
+    <label for="achternaam">Achternaam:</label>
+    <input type="text" id="achternaam" name="achternaam" required><br><br>
+
+    <input type="submit" value="Submit">
+  </form>
+
+</section>
+</main>
