--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <main>
     <section id="espresso">
       <h2>Contact</h2>
-      <p>Voor boekingen en andere vragen kunt u contact met ons opnemen door te bellen of mailen naar: Sander Feith - swwfeith@gmail.com - +31629284850 of onderstaand formulier invullen om een reserveringsverzoek in te dienen:</p>
+<p>Voor boekingen en andere vragen kunt u contact met ons opnemen door te bellen of mailen naar: Sander Feith - swwfeith@gmail.com - +31629284850 of onderstaand formulier invullen om een reserveringsverzoek in te dienen:
   
   <form>
     <label for="voornaam">Voornaam:</label>
@@ -13,5 +13,6 @@
     <input type="submit" value="Submit">
   </form>
 
+</p>
 </section>
 </main>
