--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <p>Voor boekingen en andere vragen kunt u contact met ons opnemen door te bellen of mailen naar: Sander Feith - swwfeith@gmail.com - +31629284850 of onderstaand formulier invullen om een reserveringsverzoek in te dienen:
   
   <form>
-    <label for="voornaam">Voornaam:</label>
+    <label for="voornaam" class="form-label">Voornaam:</label>
     <input type="text" id="voornaam" name="voornaam" required><br><br>
 
     <label for="achternaam">Achternaam:</label>
