--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,11 @@
     </div>
     <br><br>
 
+    <div class="form-group">
     <label for="achternaam">Achternaam:</label>
-    <input type="text" id="achternaam" name="achternaam" required><br><br>
+    <input type="text" id="achternaam" name="achternaam" required>
+    </div>
+    <br><br>
 
     <input type="submit" value="Submit">
   </form>
