--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,18 @@
     <input type="text" id="achternaam" name="achternaam" required>
     </div>
     <br>
+    
+    <div class="form-group">
+    <label for="telefoon" class="form-label">Telefoonnummer:</label>
+    <input type="text" id="telefoon" name="telefoon" required>
+    </div>
+    <br>
+
+    <div class="form-group">
+    <label for="email">E-mailadres:</label>
+    <input type="text" id="email" name="email" required>
+    </div>
+    <br>
 
     <input type="submit" value="Submit">
   </form>
