--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,12 @@
     <input type="text" id="email" name="email" required>
     </div>
     <br>
+    
+    <div class="form-group">
+    <label for="datumvan">Incheckdatum:</label>
+    <input type="date" id="datumvan" name="datumvan" required>
+    </div>
+    <br>
 
     <input type="submit" value="Submit">
   </form>
