--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,24 @@
     <input type="date" id="datumvan" name="datumvan" required>
     </div>
     <br>
+    
+    <div class="form-group">
+    <label for="datumtot">Uitcheckdatum:</label>
+    <input type="date" id="datumtot" name="datumtot" required>
+    </div>
+    <br>
+    
+    <div class="form-group">
+    <label for="volwassenen" class="form-label">Aantal volwassenen:</label>
+    <input type="text" id="volwassenen" name="volwassenen" required>
+    </div>
+    <br>
+
+    <div class="form-group">
+    <label for="kinderen">Kinderen tot 3 jaar:</label>
+    <input type="text" id="kinderen" name="kinderen" required>
+    </div>
+    <br>
 
     <input type="submit" value="Submit">
   </form>
